Pricebook editor
