# openapi/rust/src/models/mod.rs
@@ -12,6 +12,8 @@ pub mod commit_info;
 pub use self::commit_info::CommitInfo;
 pub mod config;
 pub use self::config::Config;
+pub mod docker_overrides;
+pub use self::docker_overrides::DockerOverrides;
 pub mod exec_command_input;
 pub use self::exec_command_input::ExecCommandInput;
 pub mod exec_result;
